--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<developers>
+		<developer>
+			<name>Artúr Sáfrány</name>
+			<email>safranyartur1995@gmail.com</email>
+		</developer>
+	</developers>
+
 	<groupId>com.build-twice-bulldoze-once</groupId>
 	<artifactId>universite-anonyme</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
