--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-# spring.jpa.hibernate.ddl-auto=validate
-# spring.datasource.url=jdbc:mysql://xxxxxxxx
-# spring.datasource.username=xxxxxxxx
-# spring.datasource.password=xxxxxxxx
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://database:3306/myDatabase?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+server.port = 8081
