--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://database:3306/myDatabase?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mySqlServer:3306/myDatabase?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 server.port = 8081
