--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,12 @@ services:
         ports:
             - 8082:8080
         depends_on:
-            - database
+            - mySqlServer
 
     application:
         build: .
         restart: always
         ports:
             - 8081:8081
+        depends_on:
+            - mySqlServer
