--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.3.8.Final</version>
         </dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>27.0-jre</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
