--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=asddsa
-server.port = 8081
+logging.level.root=error
+logging.level.org.springframework.web=error
+logging.level.org.hibernate=ERROR
+logging.level.com.buildtwicebulldozeonce=trace
+server.port=8081
