--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://mySqlServer:3306/myDatabase?autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=asddsa
-logging.level.root=error
-logging.level.org.springframework.web=error
+spring.datasource.password=root
+server.port = 8080
+
+logging.level.root=ERROR
+logging.level.org.springframework.web=ERROR
 logging.level.org.hibernate=ERROR
-logging.level.com.buildtwicebulldozeonce=trace
-server.port=8081
+logging.level.com.buildtwicebulldozeonce=TRACE
