--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://mySqlServer:3306/myDatabase?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password=root
-server.port = 8080
+spring.datasource.password=asddsa
+server.port = 8081
 
 logging.level.root=ERROR
 logging.level.org.springframework.web=ERROR
